[project]
name = "kDBCV"
version = "2.0.0"
description = "Efficient implementation of DBCV with a k-dimensional tree"
readme = "README.md"
authors = [
    {name = "Joseph L. Hammer", email = "jhammer3018@gmail.com"},
    {name = "Alexander J. Devanny"}
]
license = {text = "MIT"}
keywords = ["cluster", "clusters", "clustering"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]

requires-python = ">=3.9"

dependencies = [
    "numpy>=2.0.0,<3",
    "scipy>=1.7.0,<=1.14.1",
]

[project.urls]
Homepage = "https://github.com/Kaufman-Lab-Columbia/k-DBCV"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./"]
include = ["kDBCV"]
